[package]
name = "ibs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "iOS Build System - Command line tool for iOS project management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
fs_extra = "1.3.0"
tera = "1.19.1"
walkdir = "2.4.0"
colored = "2.1.0"
